--- a/notebooks/pipeline_colab.ipynb
+++ b/notebooks/pipeline_colab.ipynb
@@ -199,7 +199,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!python tools/draw_line_segments.py --samples 400"
+        "!python tools/draw_line_segments.py --samples 200"
       ],
       "metadata": {
         "colab": {
@@ -229,6 +229,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python -m tools.run --run-train --no-cache"
+      ],
+      "metadata": {
+        "id": "bijwxRH6gH9E"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -298,7 +309,13 @@
             "\u001b[33m[train_step] /usr/local/lib/python3.12/dist-packages/bitsandbytes/autograd/_functions.py:123: UserWarning: MatMul8bitLt: inputs will be cast from torch.float32 to float16 during quantization\n",
             "  warnings.warn(f\"MatMul8bitLt: inputs will be cast from {A.dtype} to float16 during quantization\")\n",
             "\u001b[0m\n",
-            "  0% 1/300 [01:49<9:06:01, 109.57s/it]"
+            "{'loss': 5.4388, 'grad_norm': 3.9372239112854004, 'learning_rate': 0.0001946666666666667, 'epoch': 0.1}\n",
+            "{'loss': 2.2933, 'grad_norm': 2.849848985671997, 'learning_rate': 0.00018866666666666668, 'epoch': 0.2}\n",
+            "{'loss': 1.1564, 'grad_norm': 1.0171029567718506, 'learning_rate': 0.000182, 'epoch': 0.3}\n",
+            "{'loss': 0.8693, 'grad_norm': 0.6415877342224121, 'learning_rate': 0.00017533333333333336, 'epoch': 0.4}\n",
+            "{'loss': 0.7957, 'grad_norm': 0.3305760324001312, 'learning_rate': 0.00016866666666666668, 'epoch': 0.5}\n",
+            "{'loss': 0.7753, 'grad_norm': 0.3360174298286438, 'learning_rate': 0.000162, 'epoch': 0.6}\n",
+            " 21% 64/300 [1:29:43<5:26:57, 83.12s/it]"
           ]
         }
       ],
